<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/Registrartitulo"
        android:textDirection="locale"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RName"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/RegistrarNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/REmail"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/RegistrarCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RName" />

    <EditText
        android:id="@+id/RPhone"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/RegistrarTelefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/REmail" />

    <EditText
        android:id="@+id/RDirecct"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/RegistrarDireccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RPhone" />

    <EditText
        android:id="@+id/RDPass"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/RegistrarPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RDirecct" />

    <Button
        android:id="@+id/buttonregistrar"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="72dp"
        android:text="@string/Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RDPass" />

    <Button
        android:id="@+id/RRegresar"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/tienesCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonregistrar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:text="@string/Registrartext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />
</androidx.constraintlayout.widget.ConstraintLayout>