<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginSesion">

    <TextView
        android:id="@+id/iniciosesion"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="65dp"
        android:text="@string/inicioSecion"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textColor="#939393"
        android:text="@string/textSecion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciosesion" />

    <EditText
        android:id="@+id/correoIS"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="60dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/fondo01"
        android:ems="10"
        android:hint="@string/correoSecion"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:text="yhonj8a@"
        android:textColor="@color/white"
        android:textColorHighlight="#575757"
        android:textColorHint="#00616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwordIS"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fondo01"
        android:ems="10"
        android:hint="@string/passwordSecion"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:text="12345"
        android:textColor="@color/white"
        android:textColorHighlight="#575757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoIS" />

    <Button
        android:id="@+id/iniciaSesion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:background="@drawable/fondo05"
        android:text="@string/btnIniciarSecion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordIS" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciaSesion">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:text="@string/RegistrarSecion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/Registrartitulo"
            android:textAllCaps="false"
            android:textColor="@color/naranja" />
    </LinearLayout>

</LinearLayout>