<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".AdminAgregarLibro">

    <include
        android:id="@+id/include3"
        layout="@layout/platilla_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NLNombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColorHint="#888888"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:ems="10"
        android:hint="@string/NLnombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <EditText
        android:id="@+id/NLAutor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/NLautor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLNombre" />

    <EditText
        android:id="@+id/NLCantidad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/NLcantidad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLAutor" />

    <EditText
        android:id="@+id/NLURL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/NLurl"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLCantidad" />

    <EditText
        android:id="@+id/NLFoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/NLImagen"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLURL" />

    <EditText
        android:id="@+id/NLDescripcion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColorHint="#888888"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/fondo04"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/NLdescripcion"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLFoto" />

    <Button
        android:id="@+id/NLBtnAgregar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_boton"
        android:text="@string/NLbtnAgregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NLDescripcion"
        app:layout_constraintVertical_bias="0.0" />
</LinearLayout>