<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".NuevoLibroPres">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="154dp"
        android:layout_height="174dp"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/MLPrestadosNombre"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/NLPnombre"
            android:layout_width="220dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="220dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/MLPrestadosAutor"
            app:layout_constraintTop_toBottomOf="@+id/NLPnombre"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/NLPautor"
            android:layout_width="220dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="220dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/MLPrestadosFecha"
            app:layout_constraintTop_toBottomOf="@+id/NLPautor"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/NLPfecha"
            android:layout_width="220dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
